--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -14,8 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # macos-13 is x64 (Intel), macos-13-xlarge is arm64 (Apple Silicon)
-        os: [ macos-13, macos-13-xlarge ]
+        os: [ macos-15, macos-15-intel ]
     permissions:
       contents: read
     steps:
